Re-did js and css with Typhos' help to fix flickering issue

--- a/src/wwwroot/styles.css
+++ b/src/wwwroot/styles.css
@@ -118,9 +118,42 @@ div.released {
 }
 
 #res {
-/*    border-bottom: 7px solid white;
+    /*    border-bottom: 7px solid white;
     border-top: 7px solid white;
     border-right: 7px solid white;
     border-left: 7px solid white;*/
     height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    margin: 0 auto;
+    min-height: 480px;
+}
+
+.bullet {
+    position: absolute;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    animation: pew-pew 3.2s infinite linear;
+}
+.bullet .icon {
+    width: 50px;
+    height: 50px;
+}
+
+@-webkit-keyframes pew-pew {
+    0% {
+        opacity: 1;
+        left: 0%;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 0;
+        left: 100%;
+    }
 }
